# mcp-code-sandbox

./: .env.docker  README.md  README_DOCKER.md  pyproject.toml  test_docker_interpreter.py  test_mcp_integration.py
src/: main.py  play.py
src/sandbox/: code_interpreter.py  file_interface.py  interpreter_factory.py
src/sandbox/docker/: __init__.py  docker_file_interface.py  docker_interpreter.py
src/sandbox/e2b/: e2b_file_interface.py  e2b_interpreter.py
src/sandbox/firecracker/: firecracker_client.py  firecracker_file_interface.py  firecracker_interpreter.py
src/tools/: code_execution_tools.py  file_tools.py  sandbox_tools.py
src/tools/charts/: chart_generator.py
src/tools/telnet/: telnet_tools.py
tests/: conftest.py
tests/sandbox/: test_code_interpreter.py  test_file_interface.py  test_interpreter_factory.py
tests/sandbox/e2b/: test_e2b_file_interface.py  test_e2b_interpreter.py
tests/sandbox/firecracker/: test_firecracker_client.py  test_firecracker_file_interface.py  test_firecracker_interpreter.py
